force-app/main/default/objects/Deal__c/Deal__c.object-meta.xml
<CustomObject>
    <label>Deal</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>