force-app/main/default/objects/Deal__c/fields/Acceptance_Rate__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_Rate__c</fullName>
    <formula>IF( Acceptances__c = 0, 0, (Acceptances__c  /  (  Acceptances__c  +  Rejections__c  )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acceptance Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>