force-app/main/default/objects/Deal__c/fields/Acceptances__c.field-meta.xml
<CustomField>
    <fullName>Acceptances__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Acceptances</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>