force-app/main/default/objects/Deal__c/fields/Attachment__c.field-meta.xml
<CustomField>
    <fullName>Attachment__c</fullName>
    <defaultValue>&apos;https://c.ap2.visual.force.com/resource/1474479881000/default&apos;</defaultValue>
    <label>Attachment</label>
    <type>Url</type>
</CustomField>