force-app/main/default/objects/Deal__c/fields/Available_Deals__c.field-meta.xml
<CustomField>
    <fullName>Available_Deals__c</fullName>
    <formula>Max_Acceptances__c  -  Acceptances__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Deals</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>