force-app/main/default/objects/Deal__c/fields/Max_Acceptances__c.field-meta.xml
<CustomField>
    <fullName>Max_Acceptances__c</fullName>
    <label>Max Acceptances</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>