force-app/main/default/objects/Deal__c/fields/Rejections__c.field-meta.xml
<CustomField>
    <fullName>Rejections__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Rejections</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>