force-app/main/default/objects/Deal__c/fields/Valid_Through__c.field-meta.xml
<CustomField>
    <fullName>Valid_Through__c</fullName>
    <label>Valid Through</label>
    <required>true</required>
    <type>Date</type>
</CustomField>